--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -9,6 +9,13 @@
     justify-content: space-between;
     margin: 30px;
 }
+.row{
+    width: 100%;
+    height: min-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .item__img{
    width: 100%;
    height: 100%;
@@ -62,5 +69,32 @@ span{
     width: 70%;
     height: 70%;
 }
+.item__location__img{
+    width: 30px;
+    height: 30px;
+    
+}
+.likeRow{
+    width: min-content;
+    height: min-content;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+.like{
+    margin-left: 20px;
+    width: 45px;
+    cursor: pointer;
+    height: 40px;
+    background-image: url(./img/whiteHeart.svg.png);
+    background-size: cover;
+}
+.likeCount{
+    margin-left: 13px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
 
 
