--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -87,7 +87,7 @@ span{
     width: 45px;
     cursor: pointer;
     height: 40px;
-    background-image: url(./img/whiteHeart.svg.png);
+    background-image: url(./img/heart-image-13.png);
     background-size: cover;
 }
 .likeCount{
